--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#teamMemeber">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -62,96 +62,183 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
-      <div class="container">
-        <h2 class="text-center">Portfolio</h2>
-        <hr class="star-primary">
-        <div class="row">
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+    <section id="ProjectDomain">
+        <div class="container">
+            <h2 class="text-center">Project Domain</h2>
+            <hr class="star-primary">
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <!--<a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
+                      <div class="caption">
+                        <div class="caption-content">
+                          <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                      </div>-->
+                    <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+                    <div>name</div>
+                    </a>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                <div class="col-sm-4 portfolio-item">
+                    <!--<a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
+                     <div class="caption">
+                       <div class="caption-content">
+                         <i class="fa fa-search-plus fa-3x"></i>
+                       </div>
+                     </div>-->
+                    <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+                    <div>name</div>
+                    </a>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                <div class="col-sm-4 portfolio-item">
+                    <!--<a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
+                     <div class="caption">
+                       <div class="caption-content">
+                         <i class="fa fa-search-plus fa-3x"></i>
+                       </div>
+                     </div>-->
+                    <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+                    <div>name</div>
+                    </a>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                <div class="col-sm-4 portfolio-item">
+                    <!--<a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
+                     <div class="caption">
+                       <div class="caption-content">
+                         <i class="fa fa-search-plus fa-3x"></i>
+                       </div>
+                     </div>-->
+                    <img class="img-fluid" src="img/portfolio/game.png" alt="">
+                    <div>name</div>
+                    </a>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                <div class="col-sm-4 portfolio-item">
+                    <!--<a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+                     <div class="caption">
+                       <div class="caption-content">
+                         <i class="fa fa-search-plus fa-3x"></i>
+                       </div>
+                     </div>-->
+                    <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+                    <div>asd</div>
+                    </a>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-            </a>
-          </div>
-          <div class="col-sm-4 portfolio-item">
-            <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                <div class="col-sm-4 portfolio-item">
+                    <!-- <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+                      <div class="caption">
+                        <div class="caption-content">
+                          <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                      </div>-->
+                    <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+                    <div>name</div>
+                    </a>
                 </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div>
+            </div>
         </div>
-      </div>
     </section>
 
     <!-- About Section -->
     <section class="success" id="about">
       <div class="container">
         <h2 class="text-center">About</h2>
+
         <hr class="star-light">
-        <div class="row">
+        <div class="row" style="margin-left: -75px ">
+            <img style="width: 250px; height: 250px" src="img/profile.png" alt="">
           <div class="col-lg-4 ml-auto">
-            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+
+            <p>about this project</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p>add more </p>
           </div>
-          <div class="col-lg-8 mx-auto text-center">
+          <!--<div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
               <i class="fa fa-download"></i>
               Download Theme
             </a>
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
+
+    <!-- Portfolio Grid Section -->
+    <section id="teamMemeber">
+      <div class="container">
+        <h2 class="text-center">Team Memebers</h2>
+        <hr class="star-primary">
+        <div class="row">
+          <div class="col-sm-4 portfolio-item">
+            <!--<a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>-->
+              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <div>name</div>
+            </a>
+          </div>
+          <div class="col-sm-4 portfolio-item">
+            <!--<a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
+             <div class="caption">
+               <div class="caption-content">
+                 <i class="fa fa-search-plus fa-3x"></i>
+               </div>
+             </div>-->
+             <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <div>name</div>
+           </a>
+         </div>
+         <div class="col-sm-4 portfolio-item">
+           <!--<a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
+            <div class="caption">
+              <div class="caption-content">
+                <i class="fa fa-search-plus fa-3x"></i>
+              </div>
+            </div>-->
+            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+           <div>name</div>
+          </a>
+        </div>
+        <div class="col-sm-4 portfolio-item">
+          <!--<a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
+           <div class="caption">
+             <div class="caption-content">
+               <i class="fa fa-search-plus fa-3x"></i>
+             </div>
+           </div>-->
+           <img class="img-fluid" src="img/portfolio/game.png" alt="">
+          <div>name</div>
+         </a>
+       </div>
+       <div class="col-sm-4 portfolio-item">
+         <!--<a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>-->
+          <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+         <div>asd</div>
+        </a>
+      </div>
+      <div class="col-sm-4 portfolio-item">
+        <!-- <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>-->
+          <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+          <div>name</div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- Contact Section -->
     <section id="contact">
