--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <h2 class="text-center">Project Domain</h2>
             <hr class="star-primary">
-            <div class="row">
+            <div class="row" style="margin-left: -5px">
                 <div class="col-sm-4 portfolio-item">
                     <!--<a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
                       <div class="caption">
@@ -74,8 +74,14 @@
                           <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                       </div>-->
-                    <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-                    <div>name</div>
+                    <span class="fa-stack fa-4x" style="position:  ">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
+
+                    <div style="margin: auto">
+                        <p style="margin: auto">name</p>
+                    </div>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -85,7 +91,10 @@
                          <i class="fa fa-search-plus fa-3x"></i>
                        </div>
                      </div>-->
-                    <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+                    <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
                     <div>name</div>
                     </a>
                 </div>
@@ -96,43 +105,14 @@
                          <i class="fa fa-search-plus fa-3x"></i>
                        </div>
                      </div>-->
-                    <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+                    <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
                     <div>name</div>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <!--<a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
-                     <div class="caption">
-                       <div class="caption-content">
-                         <i class="fa fa-search-plus fa-3x"></i>
-                       </div>
-                     </div>-->
-                    <img class="img-fluid" src="img/portfolio/game.png" alt="">
-                    <div>name</div>
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <!--<a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
-                     <div class="caption">
-                       <div class="caption-content">
-                         <i class="fa fa-search-plus fa-3x"></i>
-                       </div>
-                     </div>-->
-                    <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-                    <div>asd</div>
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <!-- <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
-                      <div class="caption">
-                        <div class="caption-content">
-                          <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                      </div>-->
-                    <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-                    <div>name</div>
-                    </a>
-                </div>
+
             </div>
         </div>
     </section>
@@ -240,8 +220,8 @@
 
 
 
-    <!-- Contact Section -->
-    <section id="contact">
+   <!-- Contact Section -->
+    <!-- <section id="contact">
       <div class="container">
         <h2 class="text-center">Contact Me</h2>
         <hr class="star-primary">
@@ -249,45 +229,45 @@
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!--      <form name="sentMessage" id="contactForm" novalidate>
+           <div class="control-group">
+             <div class="form-group floating-label-form-group controls">
+               <label>Name</label>
+               <input class="form-control" id="name" type="text" placeholder="Name" required data-validation-required-message="Please enter your name.">
+               <p class="help-block text-danger"></p>
+             </div>
+           </div>
+           <div class="control-group">
+             <div class="form-group floating-label-form-group controls">
+               <label>Email Address</label>
+               <input class="form-control" id="email" type="email" placeholder="Email Address" required data-validation-required-message="Please enter your email address.">
+               <p class="help-block text-danger"></p>
+             </div>
+           </div>
+           <div class="control-group">
+             <div class="form-group floating-label-form-group controls">
+               <label>Phone Number</label>
+               <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required data-validation-required-message="Please enter your phone number.">
+               <p class="help-block text-danger"></p>
+             </div>
+           </div>
+           <div class="control-group">
+             <div class="form-group floating-label-form-group controls">
+               <label>Message</label>
+               <textarea class="form-control" id="message" rows="5" placeholder="Message" required data-validation-required-message="Please enter a message."></textarea>
+               <p class="help-block text-danger"></p>
+             </div>
+           </div>
+           <br>
+           <div id="success"></div>
+           <div class="form-group">
+             <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
+           </div>
+         </form>
+       </div>
+     </div>
+   </div>
+ </section> -->
 
     <!-- Footer -->
     <footer class="text-center">
