--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-<<<<<<< Updated upstream
+
               <a class="nav-link js-scroll-trigger" href="#teamMemeber">Portfolio</a>
-=======
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Client</a>
->>>>>>> Stashed changes
+
+
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -69,9 +68,11 @@
       <div class="container">
         <img class="img-fluid" src="img/profile.png" alt="">
         <div class="intro-text">
+
           <span class="name">spotlite</span>
           <hr class="star-light">
           <span class="skills">iOS applcation</span>
+
         </div>
       </div>
     </header>
@@ -80,26 +81,24 @@
     <section id="ProjectDomain">
         <div class="container">
             <h2 class="text-center">Project Domain</h2>
-            <hr class="star-primary">
-            <div class="row" style="margin-left: -5px">
-                <div class="col-sm-4 portfolio-item">
+            <hr class="star-primary" style="max-width:100%">
+            <div class="row" >
+                <div class="col-sm-4 portfolio-item" style="text-align:center">
                     <!--<a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
                       <div class="caption">
                         <div class="caption-content">
                           <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                       </div>-->
-                    <span class="fa-stack fa-4x" style="position:  ">
+                    <span class="fa-stack fa-4x ">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
+                    <p>name</p>
 
-                    <div style="margin: auto">
-                        <p style="margin: auto">name</p>
-                    </div>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item" style="text-align:center">
                     <!--<a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
                      <div class="caption">
                        <div class="caption-content">
@@ -107,13 +106,13 @@
                        </div>
                      </div>-->
                     <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-circle fa-stack-2x text-primary" ></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-                    <div>name</div>
+                    <p>name</p>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item" style="text-align:center">
                     <!--<a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
                      <div class="caption">
                        <div class="caption-content">
@@ -137,8 +136,8 @@
       <div class="container">
         <h2 class="text-center">About</h2>
 
-        <hr class="star-light">
-        <div class="row" style="margin-left: -75px ">
+        <hr class="star-light" style="max-width:100%">
+        <div class="row" >
             <img style="width: 250px; height: 250px" src="img/profile.png" alt="">
           <div class="col-lg-4 ml-auto">
 
@@ -161,7 +160,7 @@
     <section id="teamMemeber">
       <div class="container">
         <h2 class="text-center">Team Memebers</h2>
-        <hr class="star-primary">
+        <hr class="star-primary" style="max-width:100%">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
             <!--<a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
