--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-<<<<<<< Updated upstream
-              <a class="nav-link js-scroll-trigger" href="#teamMemeber">Portfolio</a>
-=======
               <a class="nav-link js-scroll-trigger" href="#portfolio">Client</a>
->>>>>>> Stashed changes
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -51,11 +47,23 @@
             </li>
             <li class="nav-item">
               <div class="dropdown">
-                <a data-toggle="dropdown" class="nav-link dropdown">
+                <a data-toggle="dropdown" class="nav-link anchor-dropdown">
                   documents
-                  <ul class="dropdown-menu" aria-labelledby="dLabel">
-                    abc
-                  </ul>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item dropdownMenu" href="#">PR</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="#">CMN</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="#">Exploration</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="#">Valuation</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="#">Foundations</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="#">FD</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="#">IIV&V</a>
+                  </div>
                 </a>
               </div>
             </li>
@@ -627,6 +635,7 @@
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
+    <script src="js/newfeatures.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
