--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Client</a>
+              <a class="nav-link js-scroll-trigger" href="#client">Client</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#teamMemeber">Team</a>
             </li>
             <li class="nav-item">
               <div class="dropdown">
