change the index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/newFeature.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -99,11 +100,10 @@
                           <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                       </div>-->
-                    <span class="fa-stack fa-4x ">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <span class="fa-stack fa-5x ">
+                   <span class="glyphicon">&#xe135;</span>
             </span>
-                    <p>name</p>
+                    <p>Project Domain</p>
 
                     </a>
                 </div>
@@ -114,11 +114,10 @@
                          <i class="fa fa-search-plus fa-3x"></i>
                        </div>
                      </div>-->
-                    <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary" ></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <span class="fa-stack fa-5x">
+               <span class="glyphicon">&#xe139;</span>
             </span>
-                    <p>name</p>
+                    <p>7 Teammates</p>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item" style="text-align:center">
@@ -128,11 +127,10 @@
                          <i class="fa fa-search-plus fa-3x"></i>
                        </div>
                      </div>-->
-                    <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <span class="fa-stack fa-5x">
+              <span class="glyphicon">&#xe144;</span>
             </span>
-                    <div>name</div>
+                    <p>COTs</p>
                     </a>
                 </div>
 
@@ -148,12 +146,12 @@
         <hr class="star-light" style="max-width:100%">
         <div class="row" >
             <img style="width: 250px; height: 250px" src="img/profile.png" alt="">
-          <div class="col-lg-4 ml-auto">
 
-            <p>about this project</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p>add more </p>
+          <div class="col-lg-8 mr-auto">
+            <p style="margin-top: 50px; margin-left: 40px">
+
+                Have you ever missed out on epic party? Wanted to see what is going on around the world?
+                Wanted to feel a festival feeling without being there? With Populic, you get chance to discover our World!</p>
           </div>
           <!--<div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
@@ -171,72 +169,107 @@
         <h2 class="text-center">Team Memebers</h2>
         <hr class="star-primary" style="max-width:100%">
         <div class="row">
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item" style="text-align:center" >
             <!--<a class="portfolio-link" href="#portfolioModal1" data-toggle="modal">
               <div class="caption">
                 <div class="caption-content">
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>-->
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-            <div>name</div>
+             
+              <img class="img" src="img/portfolio/cabin.png" alt="">
+              <div style="margin:10px 60px 30px;">
+              <h4>Chengyu Shen</h4>
+                  <p class="text-muted">Developer<br><a href="mailto:shenchen@usc.edu">shenchen@usc.edu</a></p>
+              </div>
             </a>
           </div>
-          <div class="col-sm-4 portfolio-item">
+          <div class="col-sm-4 portfolio-item"  style="text-align:center">
             <!--<a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
              <div class="caption">
                <div class="caption-content">
                  <i class="fa fa-search-plus fa-3x"></i>
                </div>
              </div>-->
-             <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-            <div>name</div>
+             <img class="img "  src="img/portfolio/cake.png" alt="" style="width:650px;">
+              <div style="margin:10px 60px 30px;">
+            <h4>Shiji Zhou</h4>
+                  <p class="text-muted">Developer<br><a href="mailto:shijizho@usc.edu">shijizho@usc.edu</a></p>
+              </div>
            </a>
          </div>
-         <div class="col-sm-4 portfolio-item">
+         <div class="col-sm-4 portfolio-item" style="text-align:center">
            <!--<a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
             <div class="caption">
               <div class="caption-content">
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>-->
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
-           <div>name</div>
+            <img class="img" src="img/portfolio/circus.png" alt="">
+             <div style="margin:10px 60px 30px;">
+             <h4>Yufei Hong</h4>
+                 <p class="text-muted">Developer<br><a href="mailto:Yufeihon@usc.edu">Yufeihon@usc.edu</a></p>
+             </div>
           </a>
         </div>
-        <div class="col-sm-4 portfolio-item">
+        <div class="col-sm-4 portfolio-item" style="text-align:center">
           <!--<a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
            <div class="caption">
              <div class="caption-content">
                <i class="fa fa-search-plus fa-3x"></i>
              </div>
            </div>-->
-           <img class="img-fluid" src="img/portfolio/game.png" alt="">
-          <div>name</div>
+           <img class="img" src="img/portfolio/game.png" alt="">
+            <div style="margin:10px 60px 30px;">
+            <h4>Guanghe Cao</h4>
+                <p class="text-muted">Developer<br><a href="mailto:caog@usc.edu">caog@usc.edu</a></p>
+            </div>
          </a>
        </div>
-       <div class="col-sm-4 portfolio-item">
+       <div class="col-sm-4 portfolio-item" style="text-align:center">
          <!--<a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>-->
-          <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-         <div>asd</div>
+          <img class="img" src="img/portfolio/safe.png" alt="">
+           <div style="margin:10px 60px 30px;">
+           <h4>Yang Wei</h4>
+               <p class="text-muted">Developer<br><a href="mailto:wei495@usc.edu">wei495@usc.edu</a></p>
+           </div>
         </a>
       </div>
-      <div class="col-sm-4 portfolio-item">
+      <div class="col-sm-4 portfolio-item" style="text-align:center">
         <!-- <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>-->
-          <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-          <div>name</div>
+          <img class="img" src="img/portfolio/submarine.png" alt="">
+
+          <div style="text-align:center">
+              <h4>Lin Xia</h4>
+              <p class="text-muted">Developer<br><a href="mailto:xialin@usc.edu">xialin@usc.edu</a></p>
+          </div>
         </a>
       </div>
+            <div class="col-sm-4 portfolio-item" style="text-align:center">
+                <!-- <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
+                  <div class="caption">
+                    <div class="caption-content">
+                      <i class="fa fa-search-plus fa-3x"></i>
+                    </div>
+                  </div>-->
+                <img class="img" src="img/portfolio/submarine.png" alt="">
+                <div style="margin:10px 60px 30px;">
+                    <h4>William Goishi</h4>
+                    <p class="text-muted">Developer<br><a href="mailto:wgoishi@usc.edu">wgoishi@usc.edu</a></p>
+                </div>
+
+                </a>
+            </div>
     </div>
   </div>
 </section>
