--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/newFeature.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -101,8 +101,8 @@
                         </div>
                       </div>-->
                     <span class="fa-stack fa-5x ">
-                   <span class="glyphicon">&#xe135;</span>
-            </span>
+                   <i class="material-icons" style="font-size:96px">gps_fixed</i>
+                    </span>
                     <p>Project Domain</p>
 
                     </a>
@@ -115,7 +115,7 @@
                        </div>
                      </div>-->
                     <span class="fa-stack fa-5x">
-               <span class="glyphicon">&#xe139;</span>
+               <i class="material-icons" style="font-size:96px">people</i>
             </span>
                     <p>7 Teammates</p>
                     </a>
@@ -128,9 +128,9 @@
                        </div>
                      </div>-->
                     <span class="fa-stack fa-5x">
-              <span class="glyphicon">&#xe144;</span>
+              <i class="material-icons" style="font-size:96px">link</i>
             </span>
-                    <p>COTs</p>
+                    <p>COTS</p>
                     </a>
                 </div>
 
