--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                 <a data-toggle="dropdown" class="nav-link anchor-dropdown">
                   documents
                   <div class="dropdown-menu">
-                    <a class="dropdown-item dropdownMenu" href="#">PR</a>
+                    <a class="dropdown-item dropdownMenu" href="PR/index.html">PR</a>
                     <div class="dropdown-divider dropdownMenu"></div>
-                    <a class="dropdown-item dropdownMenu" href="#">CMN</a>
+                    <a class="dropdown-item dropdownMenu" href="CMN/index.html">CMN</a>
                     <div class="dropdown-divider dropdownMenu"></div>
-                    <a class="dropdown-item dropdownMenu" href="#">Exploration</a>
+                    <a class="dropdown-item dropdownMenu" href="Exploration/index.html">Exploration</a>
                     <div class="dropdown-divider dropdownMenu"></div>
-                    <a class="dropdown-item dropdownMenu" href="#">Valuation</a>
+                    <a class="dropdown-item dropdownMenu" href="Valuation/index.html">Valuation</a>
                     <div class="dropdown-divider dropdownMenu"></div>
-                    <a class="dropdown-item dropdownMenu" href="#">Foundations</a>
+                    <a class="dropdown-item dropdownMenu" href="Foundations/index.html">Foundations</a>
                     <div class="dropdown-divider dropdownMenu"></div>
-                    <a class="dropdown-item dropdownMenu" href="#">FD</a>
+                    <a class="dropdown-item dropdownMenu" href="FD/index.html">FD</a>
                     <div class="dropdown-divider dropdownMenu"></div>
-                    <a class="dropdown-item dropdownMenu" href="#">IIV&V</a>
+                    <a class="dropdown-item dropdownMenu" href="IIVV/index.html">IIV&V</a>
                   </div>
                 </a>
               </div>
