change the table item

--- a/FD/index.html
+++ b/FD/index.html
@@ -102,7 +102,7 @@
                 <th style="background: #18bc9c">#</th>
                 <th style="background: #18bc9c">File Name</th>
                 <th style="background: #18bc9c">Date</th>
-                <th style="background: #18bc9c">File Type</th>
+                <th style="background: #18bc9c">Author</th>
             </tr>
             </thead>
             <tbody>
