--- a/Exploration/index.html
+++ b/Exploration/index.html
@@ -102,31 +102,31 @@
                 <th style="background: #18bc9c">#</th>
                 <th style="background: #18bc9c">File Name</th>
                 <th style="background: #18bc9c">Date</th>
-                <th style="background: #18bc9c">File Type</th>
+                <th style="background: #18bc9c">Author</th>
             </tr>
             </thead>
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td><a href="">Week01_MPP_F17a_TXX.mpp</a></td>
+                <td><a href="">CIR_VCP_F17a_TXX_VX.X.doc</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td><a href="">Week01_MPP_F17a_TXX.xls</a></td>
+                <td><a href="">CIR_VCP_F17a_TXX_VX.X.pdf</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">format_color_text</i></td>
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td><a href="">Week01_MPP_F17a_TXX.mpp</a></td>
+                <td><a href="">OCD_VCP_F17a_TXX_VX.X.doc</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
             </tr>
             <tr>
                 <th scope="row">4</th>
-                <td><a href="">Week01_MPP_F17a_TXX.xls</a></td>
+                <td><a href="">OCD_VCP_F17a_TXX_VX.X.pdf</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
             </tr>
