--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container-fluid">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">CSCI 577a 17fall</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">CS577a fall 2017</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#client">Client</a>
+              <a class="nav-link js-scroll-trigger" href="#details">Details</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#client">Client</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#teamMemeber">Team</a>
@@ -80,17 +80,17 @@
         <div class="intro-text">
 
           <span class="name">spotlite</span>
-          <hr class="star-light">
-          <span class="skills">iOS applcation</span>
+          <hr class="star-light" style="max-width:100%">
+          <span class="skills">iOS applcation - React Native - Nodejs</span>
 
         </div>
       </div>
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="ProjectDomain">
+    <section id="details">
         <div class="container">
-            <h2 class="text-center">Project Domain</h2>
+            <h2 class="text-center">Project Details</h2>
             <hr class="star-primary" style="max-width:100%">
             <div class="row" >
                 <div class="col-sm-4 portfolio-item" style="text-align:center">
@@ -101,7 +101,7 @@
                         </div>
                       </div>-->
                     <span class="fa-stack fa-5x ">
-                   <i class="material-icons" style="font-size:96px">gps_fixed</i>
+                   <i class="material-icons" style="font-size:96px; color:#18bc9c">gps_fixed</i>
                     </span>
                     <p>Project Domain</p>
 
@@ -115,7 +115,7 @@
                        </div>
                      </div>-->
                     <span class="fa-stack fa-5x">
-               <i class="material-icons" style="font-size:96px">people</i>
+               <i class="material-icons" style="font-size:96px; color:#18bc9c">people</i>
             </span>
                     <p>7 Teammates</p>
                     </a>
@@ -128,7 +128,7 @@
                        </div>
                      </div>-->
                     <span class="fa-stack fa-5x">
-              <i class="material-icons" style="font-size:96px">link</i>
+              <i class="material-icons" style="font-size:96px; color:#18bc9c">link</i>
             </span>
                     <p>COTS</p>
                     </a>
@@ -139,9 +139,9 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section class="success" id="client">
       <div class="container">
-        <h2 class="text-center">About</h2>
+        <h2 class="text-center">Customer</h2>
 
         <hr class="star-light" style="max-width:100%">
         <div class="row" >
@@ -151,7 +151,7 @@
             <p style="margin-top: 50px; margin-left: 40px">
 
                 Have you ever missed out on epic party? Wanted to see what is going on around the world?
-                Wanted to feel a festival feeling without being there? With Populic, you get chance to discover our World!</p>
+                Wanted to feel a festival feeling without being there? With Sp, you get chance to discover our World!</p>
           </div>
           <!--<div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
