change the table type

--- a/IIVV/index.html
+++ b/IIVV/index.html
@@ -108,7 +108,7 @@
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td><a href="">Week01_MPP_F17a_TXX.mpp</a></td>
+                <td><a href="">OCD_IIVV_VCP_F17a_TXX_VX.X.xls</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
             </tr>
