--- a/PR/index.html
+++ b/PR/index.html
@@ -113,7 +113,7 @@
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td><a href="">Week01_MPP_F17a_TXX.xls</a></td>
+                <td><a href="">Week01_PR_F17a_TXX.xls</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">format_color_text</i></td>
             </tr>
