--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
       </div>
     </div>
 
+    <a id="back-to-top" href="#" class="btn btn-primary btn-lg material-icons back-to-top" style="background-color:#18bc9c; border-color:white" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left" style="height:50px; width:50px;">vertical_align_top</a>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
@@ -593,7 +594,6 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
-
   </body>
 
 </html>
