--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="img/profile.png" alt="">
+        <img class="img-fluid img" src="img/populic_icon_play.png" alt="" style="width:1000px;">
         <div class="intro-text">
 
           <span class="name">spotlite</span>
@@ -145,7 +145,7 @@
 
         <hr class="star-light" style="max-width:100%">
         <div class="row" >
-            <img style="width: 250px; height: 250px" src="img/profile.png" alt="">
+            <img class = "img" style="width: 250px; height: 250px" src="img/portfolio/customer.jpg" alt="customer">
 
           <div class="col-lg-8 mr-auto">
             <p style="margin-top: 50px; margin-left: 40px">
@@ -177,7 +177,7 @@
                 </div>
               </div>-->
              
-              <img class="img" src="img/portfolio/cabin.png" alt="">
+              <img class="img" src="img/portfolio/scy_profile.jpg" alt=""  style="width: 250px; height: 250px">
               <div style="margin:10px 60px 30px;">
               <h4>Chengyu Shen</h4>
                   <p class="text-muted">Developer<br><a href="mailto:shenchen@usc.edu">shenchen@usc.edu</a></p>
@@ -191,7 +191,7 @@
                  <i class="fa fa-search-plus fa-3x"></i>
                </div>
              </div>-->
-             <img class="img "  src="img/portfolio/cake.png" alt="" style="width:650px;">
+             <img class="img" src="img/portfolio/shiji.jpg" alt="" style="width: 250px; height: 250px">
               <div style="margin:10px 60px 30px;">
             <h4>Shiji Zhou</h4>
                   <p class="text-muted">Developer<br><a href="mailto:shijizho@usc.edu">shijizho@usc.edu</a></p>
@@ -205,7 +205,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>-->
-            <img class="img" src="img/portfolio/circus.png" alt="">
+            <img class="img" src="img/portfolio/alex.png" alt=""  style="width: 250px; height: 250px">
              <div style="margin:10px 60px 30px;">
              <h4>Yufei Hong</h4>
                  <p class="text-muted">Developer<br><a href="mailto:Yufeihon@usc.edu">Yufeihon@usc.edu</a></p>
@@ -219,7 +219,7 @@
                <i class="fa fa-search-plus fa-3x"></i>
              </div>
            </div>-->
-           <img class="img" src="img/portfolio/game.png" alt="">
+           <img class="img" src="img/portfolio/game.png" alt=""  style="width: 250px; height: 250px">
             <div style="margin:10px 60px 30px;">
             <h4>Guanghe Cao</h4>
                 <p class="text-muted">Developer<br><a href="mailto:caog@usc.edu">caog@usc.edu</a></p>
@@ -233,7 +233,7 @@
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>-->
-          <img class="img" src="img/portfolio/safe.png" alt="">
+          <img class="img" src="img/portfolio/yang.png" alt=""  style="width: 250px; height: 250px">
            <div style="margin:10px 60px 30px;">
            <h4>Yang Wei</h4>
                <p class="text-muted">Developer<br><a href="mailto:wei495@usc.edu">wei495@usc.edu</a></p>
@@ -247,7 +247,7 @@
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>-->
-          <img class="img" src="img/portfolio/submarine.png" alt="">
+          <img class="img" src="img/portfolio/submarine.png" alt=""  style="width: 250px; height: 250px">
 
           <div style="text-align:center">
               <h4>Lin Xia</h4>
@@ -262,7 +262,7 @@
                       <i class="fa fa-search-plus fa-3x"></i>
                     </div>
                   </div>-->
-                <img class="img" src="img/portfolio/submarine.png" alt="">
+                <img class="img" src="img/portfolio/submarine.png" alt=""  style="width: 250px; height: 250px">
                 <div style="margin:10px 60px 30px;">
                     <h4>William Goishi</h4>
                     <p class="text-muted">Developer<br><a href="mailto:wgoishi@usc.edu">wgoishi@usc.edu</a></p>
@@ -274,43 +274,36 @@
   </div>
 </section>
 
-    <!-- Footer -->
-    <footer class="text-center page-footer center-on-small-only">
-      <div class="footer-above" style="height: 150px">
-        <div class="container">
-          <div class="row">
-            <div class="footer-col col-md-4">
-              <h3>Organization</h3>
-              <p> University of Southern California
-            </div>
-            <div class="footer-col col-md-4">
-              <h3>Contact</h3>
-              <p><a class="email" href="mailto:shenchen@usc.edu">Chengyu SHEN</a></p>
-            </div>
-            <div class="footer-col col-md-4">
-              <h3>About us</h3>
-              <p>CSCI 577a Fall2017 team04</p>
-            </div>
-          </div>
+<!-- Footer -->
+<footer class="text-center page-footer center-on-small-only">
+  <div class="footer-above">
+    <div class="container">
+      <div class="row">
+        <div class="footer-col col-md-4">
+          <h3>Organization</h3>
+          <p> University of Southern California
+        </div>
+        <div class="footer-col col-md-4">
+          <h3>Contact</h3>
+          <p><a class="email" href="mailto:shenchen@usc.edu">Chengyu SHEN</a></p>
+        </div>
+        <div class="footer-col col-md-4">
+          <h3>About us</h3>
+          <p>CSCI 577a Fall2017 team04</p>
         </div>
       </div>
-      <div class="footer-below">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              Copyright &copy; CSCI 577a Team04
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top d-lg-none">
-      <a class="btn btn-primary js-scroll-trigger" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-      </a>
     </div>
+  </div>
+  <div class="footer-below">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          Copyright &copy; CSCI 577a Team04
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <!-- Portfolio Modals -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
