--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           <div class="col-lg-8 mr-auto">
             <p style="margin-top: 50px; margin-left: 40px">
 
-                Have you ever missed out on epic party? Wanted to see what is going on around the world?
-                Wanted to feel a festival feeling without being there? With Sp, you get chance to discover our World!</p>
+                Do you want to become a social star around your location? Have you ever missed out on epic party? Wanted to see what is going on around the world?
+                Wanted to feel a festival feeling without being there? With Spotlite, you get chance to discover our World!</p>
           </div>
           <!--<div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
@@ -219,7 +219,7 @@
                <i class="fa fa-search-plus fa-3x"></i>
              </div>
            </div>-->
-           <img class="img" src="img/portfolio/game.png" alt=""  style="width: 250px; height: 250px">
+           <img class="img" src="img/portfolio/caog.jpg" alt=""  style="width: 250px; height: 250px">
             <div style="margin:10px 60px 30px;">
             <h4>Guanghe Cao</h4>
                 <p class="text-muted">Developer<br><a href="mailto:caog@usc.edu">caog@usc.edu</a></p>
@@ -247,7 +247,7 @@
               <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>-->
-          <img class="img" src="img/portfolio/submarine.png" alt=""  style="width: 250px; height: 250px">
+          <img class="img" src="img/portfolio/linxia.jpg" alt=""  style="width: 250px; height: 250px">
 
           <div style="text-align:center">
               <h4>Lin Xia</h4>
