new one for midterm

--- a/Valuation/index.html
+++ b/Valuation/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Valuation Files</title>
+    <title>FC Package</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -107,6 +107,12 @@
             <tbody>
             <tr>
                 <th scope="row">1</th>
+                <td><a href="./FCPackage/index.html">FC Package</a></td>
+                <td>09/12/2017</td>
+                
+            </tr>
+            <tr>
+                <th scope="row">2</th>
                 <td><a href="./WinC_T04_F16.pdf">WinC_T04_F16.pdf</a></td>
                 <td>09/12/2017</td>
                 
