--- a/CMN/index.html
+++ b/CMN/index.html
@@ -112,8 +112,13 @@
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td><a href="CMN_09_19_T04.docx">CMN_09_12_F17_T04.docx</a></td>
-              <td>09/12/2017</td>
+              <td><a href="CMN_09_19_T04.docx">CMN_09_19_F17_T04.docx</a></td>
+              <td>09/19/2017</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td><a href="CMN_10_12_T04.docx">CMN_10_12_F17_T04.docx</a></td>
+              <td>10/12/2017</td>
             </tr>
             </tbody>
         </table>
