--- a/Valuation/index.html
+++ b/Valuation/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FC Package</title>
+    <title>Valuation Files</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -107,7 +107,7 @@
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td><a href="./FCPackage/index.html">FC Package</a></td>
+                <td><a href="./FCPackage/index.html">DC Package</a></td>
                 <td>09/12/2017</td>
                 
             </tr>
