midterm final version for midterM

--- a/Foundations/FCPackage/index.html
+++ b/Foundations/FCPackage/index.html
@@ -107,22 +107,22 @@
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td><a href="./LCP_TRR_F17a_T04_V1.1.doc">LCP_TRR_F17a_T04_V1.1.doc</a></td>
+                <td><a href="./LCP_DCP_F17a_T04_V1.1.doc">LCP_DCP_F17a_T04_V1.1.doc</a></td>
                 <td>10/16/2017</td>
             </tr>
             <tr>
                 <th scope="row">1</th>
-                <td><a href="./LCP_TRR_F17a_T04_V1.1.pdf">LCP_TRR_F17a_T04_V1.1.pdf</a></td>
+                <td><a href="./LCP_DCP_F17a_T04_V1.1.pdf">LCP_DCP_F17a_T04_V1.1.pdf</a></td>
                 <td>10/16/2017</td>
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td><a href="./FED_FCP_F17a_T04_V1.2.docx">FED_FCP_F17a_T04_V1.2.doc</a></td>
+                <td><a href="./FED_FCP_F17a_T04_V1.2.docx">FED_DCP_F17a_T04_V1.2.doc</a></td>
                 <td>10/16/2017</td>
             </tr>
             <tr>
                 <th scope="row">4</th>
-                <td><a href="./FED_FCP_F17a_T04_V1.2.pdf">FED_FCP_F17a_T04_V1.2.pdf</a></td>
+                <td><a href="./FED_FCP_F17a_T04_V1.2.pdf">FED_DCP_F17a_T04_V1.2.pdf</a></td>
                 <td>10/16/2017</td>
             </tr>
             <tr>
@@ -157,12 +157,22 @@
             </tr>
             <tr>
                 <th scope="row">11</th>
-                <td><a href="./Team04_Populic_FCR_ARB.pdf">Team04_Populic_FCR_ARB.pdf</a></td>
-                <td>10/08/2017</td>
+                <td><a href="./TPC_DCP_F17_T04_V1.0.docx">TPC_DCP_F17_T04_V1.0.docx</a></td>
+                <td>10/16/2017</td>
             </tr>
             <tr>
                 <th scope="row">12</th>
-                <td><a href="./all_Diagram_inOneProject.vpp">Team04_Diagram.vpp</a></td>
+                <td><a href="./TPC_DCP_F17_T04_V1.0.pdf">TPC_DCP_F17_T04_V1.0.pdf</a></td>
+                <td>10/16/2017</td>
+            </tr>
+            <tr>
+                <th scope="row">13</th>
+                <td><a href="./Team04_Populic_FCR_ARB.pdf">Team04_Populic_DCP_ARB.pdf</a></td>
+                <td>10/08/2017</td>
+            </tr>
+            <tr>
+                <th scope="row">14</th>
+                <td><a href="./all_Diagram_inOneProject.vpp">Team04_DCP_Diagram.vpp</a></td>
                 <td>10/16/2017</td>
             </tr>
                 
