--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
         <div class="footer-col col-md-4">
           <h3>About us</h3>
-          <p>CSCI 577a Fall2017 team04</p>
+          <p>CSCI 577a 17FALL</p>
         </div>
       </div>
     </div>
