--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                     <div class="dropdown-divider dropdownMenu"></div>
                     <a class="dropdown-item dropdownMenu" href="Foundations/index.html">Foundations</a>
                     <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="Development/index.html">Development</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
                     <a class="dropdown-item dropdownMenu" href="FD/index.html">FD</a>
                     <div class="dropdown-divider dropdownMenu"></div>
                     <a class="dropdown-item dropdownMenu" href="IIVV/index.html">IIV&V</a>
