--- a/Valuation/index.html
+++ b/Valuation/index.html
@@ -76,6 +76,9 @@
               </div>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="../Development/index.html">Development</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="../FD/index.html">FD</a>
             </li>
             <li class="nav-item">
