--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+<!--
+            <li class = "nav-item">
+                <a class="nav-link js-scroll-trigger" href="./team04a.zip">Project Achieve</a>  
+            </li>
+-->
             <li class="nav-item">
+            
               <a class="nav-link js-scroll-trigger" href="#details">Details</a>
             </li>
             <li class="nav-item">
